--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1{
     font-size: 128px;
 
     font-family: "Animal Crossing";
+
 }
 
 #selection
@@ -35,6 +36,10 @@ h1{
     font-size: 128px;
 
     font-family: "Animal Crossing";
+}
+
+h4{
+    display: none;
 }
 
 
